Changelog 2021 Mar 27:
    -Removed some silly semicolons
    -Added flexibility in YtDownloader class
    -Cache deletion moved to YtDownloader class
    -DM for bug reporting functionality added
    -Added "Text-Only" branch to GitHub repository

Changelog 2021 Mar 25:
    -play command "already playing audio" message removed.

Changelog 2021 Mar 10:
    -Message censoring moved to MessageChecker.py
    -Restarts/Shutdowns edit bot status

Changelog 2021 Mar 08:
    -Major refactor added YtDownloader.py
    -Fixed error when user left VC while audio playing
    -Formatting of global-censored.txt slightly altered
    -OWNER_DM environment variable removed
    -setup script added

Changelog 2021 Mar 07:
    -youtube-dl downloads and operates silently
    -Bot sets a status
    -stop command will notify if nothing playing

Changelog 2021 Mar 05:
    -play command will resume paused playback
    -announce command no longer requires quotes

Changelog 2021 Mar 04:
    -Fixed issue with bot listing certain video titles as "None"

Changelog 2021 Mar 03:
    -play and yt command now add to queue if a song is playing
    -Some more unhelpful comments
    -Underscores removed form commands for more uniform formatting

Changelog 2021 Mar 01:
    -Minor reformatting of the DM given upon removal of an offensive message
    -add_role and remove_role work either by @mentioning the role or listing the name
    -give_role added
    -role management system refactored
    

Changelog 2021 Feb 25:
    -Minor reformat to guild join messages
    -Discord Slash Commands integration will come as soon as that's officially supported

Changelog 2021 Feb 22:
    -Fixes to on_guild_join
    -on_guild_join now DMs the server owner
    -URL for the BasicBot website has been moved to an environment variable

Changelog 2021 Feb 05:
    -Added command: --server-info
    -Code cleanup and commands categorized in python file

Changelog 2021 Feb 04:
    -Bot prefix changed from '!basic_' to '--'