@@ -1,3 +1,6 @@
+Changelog 2021 Mar 28:
+    -Added loop command
+
 Changelog 2021 Mar 27:
     -Removed some silly semicolons
     -Added flexibility in YtDownloader class
